# pdc

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.linux  README.md  dune  dune-project  linux.patch  pdc.ml
examples/correct/: ap.pd  array_assign.pd  array_assign_small.pd  bitwise.pd  book.pd  choose.pd  choose3.pd  choose4.pd  choose_many.pd  comments.pd  dining_cryptographers.pd  do.pd  do2.pd  modulo.pd  monty_stick.pd  monty_switch.pd  print.pd  print2.pd  prob_assign.pd  prob_assign2.pd  this_should_work.pd  while.pd
examples/incorrect/: ap.pd  bad_identifier.pd  choose.pd  do_requires_boolean.pd  duplicate_identifier.pd  if_requires_boolean.pd  incompatible_assignment.pd  incompatible_assignment2.pd  incompatible_assignment3.pd  incompatible_assignment4.pd  incompatible_assignment5.pd  incompatible_binop.pd  incompatible_binop2.pd  incompatible_unop.pd  incompatible_unop2.pd  no_float.pd  prob_assign.pd  usl_invalid_array_access.pd  while_requires_boolean.pd
lib/: aST.ml  compile.ml  compile.mli  dune  gen.ml  gen.mli  lexer.mll  parser.mly  program.ml  semant.ml  semant.mli
lib/codegen/: context.ml  dune  llvmPass.ml  llvmPass.mli
lib/common/: aST.ml  context.ml  contextCommon.ml  dune  meta.ml  scope.ml  scope.mli  visitorMonad.ml  visitorMonad.mli  walker.ml
lib/interop/: dune  stdlib.ml
lib/native/: dune  extra.ml
lib/passes/: dune  passContext.ml  passContext.mli  print.ml  print.mli  scope.ml  scope.mli  scopeRes.ml  scopeRes.mli  typeCheck.ml  typeCheck.mli  walker.ml
lib/semantic/: context.ml  dune  fixASTPass.ml  fixASTPass.mli  loweringPass.ml  miscCheckPass.ml  print.ml  printPass.ml  scope.ml  scope.mli  scopePass.ml  scopeRes.ml  scopeRes.mli  typeCheck.ml  typeCheckPass.ml  typeInferPass.ml
lib/setup/: dune  setup.ml
llvm/: CMakeLists.txt
llvm/A4RRP/: CMakeLists.txt  Pass.cpp
llvm/A4RRandomProvider/: CMakeLists.txt  Pass.cpp
llvm/Extra/: CMakeLists.txt  Extra.cpp
llvm/SrandRP/: CMakeLists.txt  Pass.cpp
stdlib/: CMakeLists.txt  llvm.c  test.c
stdlib/include/: common.h  print.h  random.h
stdlib/src/: print.c  random.c
test/: dune
